<resources>
    <string name="app_name">LogiHubApp</string>
    <string name="msg1">Зареєструватися</string>
    <string name="msg2">Увійти</string>
    <string name="msg3">Ім`я користувача</string>
    <string name="msg4">Пароль</string>
    <string name="msg5">Ім`я</string>
    <string name="msg6">Прізвище</string>
    <string name="msg7">Електронна пошта</string>
    <string name="msg8">Пароль</string>
    <string name="msg9">Вантажівки</string>
    <string name="msg10">Рахунки-фактури</string>
    <string name="msg11">Профіль</string>
    <string name="msg12">Ім`я</string>
    <string name="msg13">Прізвище</string>
    <string name="msg14">Особиста інформація</string>
    <string name="msg15">Налаштування системи</string>
    <string name="msg16">Змінити мову на англійську</string>
    <string name="msg19">Вийти</string>
    <string name="msg20">Рахунок-фактура</string>
    <string name="msg21">Дата</string>
    <string name="msg22">Номер вантажівки</string>
    <string name="msg23">Електронна адреса менеджера вантажівки</string>
    <string name="msg24">Номер місця</string>
    <string name="msg25">Електронна адреса менеджера з паркування</string>
    <string name="msg26">Опис</string>
    <string name="msg27">Ціна</string>
    <string name="msg28">Підписано менеджером паркування</string>
    <string name="msg29">підписано</string>
    <string name="msg30">Підписано менеджером вантажівки</string>
    <string name="msg31">Підписати рахунок-фактуру</string>
    <string name="msg32">Експортувати рахунок-фактуру</string>
    <string name="msg33">зображення</string>
    <string name="msg34">Пошук</string>
    <string name="msg35">Скинути</string>
    <string name="msg36">Усі</string>
    <string name="msg37">Не підписані менеджером паркування</string>
    <string name="msg38">Не підписані менеджером вантажівки</string>
    <string name="msg39">Підписані</string>
    <string name="msg40">Компанія</string>
    <string name="msg41">Вантажівка</string>
    <string name="msg42">Номер</string>
    <string name="msg43">Ширина</string>
    <string name="msg44">Довжина</string>
    <string name="msg45">Висота</string>
    <string name="msg46">Вага</string>
    <string name="msg47">Редагувати</string>
    <string name="msg48">Профіль</string>
    <string name="msg49">Ім`я</string>
    <string name="msg50">Прізвище</string>
    <string name="msg51">Оновити</string>
    <string name="msg53">Вантажівка</string>
    <string name="msg54">Номер</string>
    <string name="msg55">Ширина:</string>
    <string name="msg56">Довжина:</string>
    <string name="msg57">Висота:</string>
    <string name="msg58">Вага:</string>
    <string name="msg59">Оновити</string>
    <string name="msg60">Дата</string>
    <string name="msg61">id</string>
    <string name="msg62">Ціна</string>
    <string name="msg63">Електронна пошта</string>
    <string name="msg64">id</string>
    <string name="msg65">Номер</string>
</resources>