<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="sans-serif-thin"
    tools:context=".ui.activity.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/light_green"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/light_green"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/msg12"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lastNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:lines="1"
                    android:text="@string/msg13"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/msg14"
                    android:textColor="@color/light_grey"
                    android:textSize="17dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editUserButton"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit"
                    app:cornerRadius="28dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:lines="1"
                android:text="@string/msg7"
                android:textColor="@color/black"
                android:textSize="19dp" />

            <TextView
                android:id="@+id/companyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:lines="1"
                android:text="Company"
                android:textColor="@color/black"
                android:textSize="19dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/msg15"
                    android:textColor="@color/light_grey"
                    android:textSize="17dp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:lines="1"
                android:text="@string/msg16"
                android:textColor="@color/black"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/singOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:lines="1"
                android:text="@string/msg19"
                android:textColor="@color/red"
                android:textSize="19dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_green"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

</FrameLayout>